5.9 - Creating a container runtime sandbox -TOBEContinued.yml
5.9 - Creating a container runtime sandbox

apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: my-runtimeclass
handler: my-configuration 

A runtimeClass defines a runtime config. You can apply the runtimeClass to pods to male them use the sandboxed runtime. 

Name is the name used to apply the runtimeclass to pods. 

Handler refers to a section in the containerd config file that configure runsc. 

apiVersion: v1
kind: Pod
metadata: 
  name: secret-volume-pod
spec: 
  runtimeClassName: my-runtimeclass 
  containers: 
  - name: busybox 
    image: busybox 


sudo add-apt-repository "deb [arch=amd64,arm64] https://storage.googleapis.com/gvisor/releases release main"
