6.6 - Analizying resource yaml files.yml
6.6 - Analizying resource yaml files

Static analysis applied to yaml: 

1 - Dont' let the containers use host namespaces : 
When possible, avoid the use of host namespaces in your Pod configurations ( i.e., with hostNetwork: true , hostIPC:
true , or hostPID: true ).
2 - Avoid using privileged mode 
3 - Don't use latest tag
4 - Avoid runAsUser 0

###Example: 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-analysis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-analysis-deployment
  template:
    metadata:
      labels:
        app: static-analysis-deployment
    spec:
      hostIPC: true
      hostNetwork: true
      hostPID: true
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        securityContext:
          privileged: true

Let's correct: 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-analysis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-analysis-deployment
  template:
    metadata:
      labels:
        app: static-analysis-deployment
    spec:
      hostIPC: false
      hostNetwork: false
      hostPID: false
      containers:
      - name: nginx
        image: nginx:1.19.1 
        ports:
        - containerPort: 80
        securityContext:
          privileged: false
